...
        // Dropdown with titles
        ExposedDropdownMenuBox(
            expanded = expanded,
            onExpandedChange = { expanded = !expanded },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("DropdownMenu")
        ) {
            OutlinedTextField(
                readOnly = true,
                value = selectedTitle,
                onValueChange = { },
                label = { Text(text = stringResource(id = R.string.search_book)) },
...

        // Search Bar
        OutlinedTextField(
            value = searchQuery,
            onValueChange = { searchQuery = it },
            label = { Text(text = stringResource(R.string.enter_keyword)) },
            modifier = Modifier.fillMaxWidth().testTag("SearchField"),
            colors = OutlinedTextFieldDefaults.colors(
                unfocusedBorderColor = Color.Black,
                focusedBorderColor = Color.Black
            )
        )

...
            colors = ButtonDefaults.buttonColors(
                containerColor = MaterialTheme.colorScheme.secondaryContainer,
                contentColor = MaterialTheme.colorScheme.primary
            ),
            modifier = Modifier
                .align(Alignment.CenterHorizontally)
                .testTag("SearchButton")
        ) {
            Text(text = stringResource(R.string.search))
        }

        Spacer(modifier = Modifier.height(dimensionResource(R.dimen.medium_padding)))

...
            modifier = Modifier.fillMaxWidth()
        ) {
            items(searchResults) { result ->
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("SearchResult")
                        .padding(dimensionResource(R.dimen.small_padding))
                        .clickable {
                            navController.navigate(
                                NavRoutes.ReadingScreen.createRoute(
                                    selectedId - 1,
                                    result.chapterNumber - 1
...
