...
            Button(
                onClick = { navController.navigate("library_screen") },
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.secondaryContainer,
                    contentColor = MaterialTheme.colorScheme.onSecondaryContainer
                ),
                modifier = Modifier.testTag("StartedButton")
            ) {
                Text(
                    text = stringResource(R.string.get_started),
                    style = MaterialTheme.typography.bodyLarge
                )
            }
...
